<resources>
    <string name="app_name">HomeNet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Einstellungen</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="def_bigValue">10 °C</string>
    <string name="def_desc_bigValue">Temperatur</string>

    <string name="def_sValue1">10 °C</string>
    <string name="def_desc_sValue1">Minimale Temperatur</string>

    <string name="def_sValue2">10 %</string>
    <string name="def_desc_sValue2"></string>

    <string name="cVD_bigVID">ID des großen Werts:</string>
    <string name="cVD_sV1ID">ID des 1. kleinen Werts:</string>
    <string name="cVD_sV2ID">ID des 2. kleinen Werts:</string>

    //Informations

    <string name="pls_restart">Bitte App neu starten um Änderungen zu übernehmen!</string>
    <string name="opt_restart">Eventuell App neu starten!</string>

    //Error Messages

    <string name="err_no_connection_to_server">Keine Verbindung zum Server!</string>
    <string name="err_conversion_not_possible">Wert kann nicht dargestellt werden!</string>

    <string name="err_recString_not_readable">Einige Einträge konnten nicht gelesen werden! (Korrupt)</string>
    <string name="err_recString_not_smoothable">Werte konnten nicht für Darstellung geglättet werden!</string>


    //Preferences keys

    <string name="key_hnSavesFile">hnSettings</string>

    <string name="key_ServerIP">serverIP</string>
    <string name="key_ServerPort">serverPort</string>
    <string name="key_autorefresh">autorefresh</string>

    <string name="key_countTiles">countTiles</string>
    <string name="key_homeForceLayout">homeForceLayout</string>

    <string name="key_countValuesHistory">countHistoryValues</string>
    <string name="key_historyLookBackSec">historyLookBackSec</string>

    //Titles

    <string name="title_settings">Einstellungen</string>
    <string name="title_confVDisplay">Widget-Einstellungen</string>
    <string name="title_history">Rückblick</string>

    //Settings

    //Server settings
    <string name="server_settings">Server-Einstellungen</string>

    <string name="server_ip">IP-Adresse:</string>
    <string name="server_port">Port:</string>

    <string name="autorefresh">Automatisch Aktualisieren (10 s)</string>
    <string name="check_update">Auf Update prüfen</string>

    //Home fragment appearance settings
    <string name="home_settings">Startbildschirm-Einstellungen</string>

    <string name="count_tiles">Anzahl Widgets:</string>
    <string name="force_home_layout">Layout erzwingen:</string>

    //History settings
    <string name="history_settings">Rückblick-Einstellungen</string>
    <string name="count_valuesToDisplay">Anzahl Einträge:</string>

    <string name="count_secLookBack">Rückblickzeit in h:</string>

    //Exit prompt
    <string name="s_exit_title">Speichern?</string>
    <string name="s_exit_text">Sollen die änderungen gespeichert werden?</string>

    <string name="s_exit_yes">Ja</string>
    <string name="s_exit_no">Nein</string>

</resources>